<resources>
    <string name="app_name">Islamic Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_rearrange">Rearrange</string>
    <string name="action_feedback">Feedback</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_reading2" translatable="false">ReadingActivity2</string>
    <string name="About">About</string>
    <string name="title_activity_book_toc_bookmarks" translatable="false">book_toc_bookmarks</string>
    <string name="tab_Overview">Overview</string>
    <string name="tab_Table_of_Contents">Table of Contents</string>
    <string name="tab_Notes_and_Highlights">Notes and Highlights</string>
    <string name="tab_Bookmarks">Bookmarks</string>
    <string name="authors">Authors</string>
    <string name="title_activity_book_catalog_display" translatable="false">BookCatalogDisplay</string>
    <string name="information_card">Information Card</string>
    <string name="about_book">about the book</string>
    <string name="abouth_the_author">Abouth the author</string>
    <string name="Downloading">Downloading …</string>
    <string name="open">Open</string>
    <string name="action_rate">Rate App</string>
    <string name="action_share">Share</string>
    <string name="categoreies">Categories</string>
    <string name="title_activity_book_catalog_filter">Brows Books</string>
    <string name="all">All Books</string>
    <string name="base_url" translatable="false">http://booksapi.islam-db.com/data</string>
    <string name="url_covers" translatable="false">covers</string>
    <string name="dialog_information_database_not_available">Book Information Database not available,\n download it?</string>
    <string name="book_information_error_close">Sorry!!\nthere is a problem with Book Information Database\n]</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="wait_for_download">Retry after the Book Information Databse downloaded</string>
    <string name="book_information_database">book information database</string>
    <string name="action_add_book_mark">add bookmark</string>
    <string name="action_remove_book_mark">Remove bookmark</string>
    <string name="page">Page :</string>
    <string name="part">Part :</string>
    <string name="search_list">search selected books</string>
    <string name="action_copy_text">copy</string>
    <string name="action_share_text">share</string>
    <string name="ddd">"highlightClicked "</string>
    <string name="sd" translatable="false">WebAppInterface</string>
    <string name="action_bar_title_all_books">All books</string>
    <string name="before_first_bookmark">To add a bookmark, tap the top corner of the page</string>
    <string name="before_first_note">Tap &amp; hold on some text to create highlights and notes</string>
    <string name="checked">Checked</string>
    <string name="decrease_font_size">Decrease font size</string>
    <string name="decrease_line_height">Decrease line height</string>
    <string name="error_message_title">Google Play error</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="increase_line_height">Increase line height</string>
    <string name="invalid_page_number">Enter a page number from %1$d to %2$d</string>
    <string name="library_sort_by_author_death_year">Author Death Year</string>
    <string name="library_sort_by_title">Title</string>
    <string name="library_sort_title">Sort by</string>
    <string name="menu_highlight_color_blue">Highlight Blue</string>
    <string name="menu_highlight_color_green">Highlight Green</string>
    <string name="menu_highlight_color_red">Highlight Red</string>
    <string name="menu_highlight_color_yellow">Highlight Yellow</string>
    <string name="menu_reader_search_exit">Done with this search</string>
    <string name="menu_reader_settings">Display options</string>
    <string name="menu_remove_highlight">Remove highlight</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_table_of_contents">Contents</string>
    <string name="more"><u>More</u></string>
    <string name="next_result_button">Next result</string>
    <string name="pref_line_height_label_initial_text">100%</string>
    <string name="pref_text_size_label_initial_text">100%</string>
    <string name="pref_themes">Viewing theme</string>
    <string name="pref_themes_day">Day</string>
    <string name="pref_themes_night">Night</string>
    <string name="pref_themes_sepia">Sepia</string>
    <string name="previous_result_button">Previous result</string>
    <string name="search_hint">Search Selected books</string>
    <string name="search_inside_volume_hint">Search in book</string>
    <string name="side_drawer_downloaded_only">Downloaded only</string>
    <string name="skim_page_label_separator">/</string>
    <string name="unchecked">Unchecked</string>
    <string name="lipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus tincidunt nisi nec finibus.</string>
    <string name="reset">Reset</string>
    <string-array name="colors_material_names" translatable="false">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep Orange</item>
    </string-array>
    <string name="pref_notif_color" translatable="false">Notification color</string>
    <string name="pref_notif_content" translatable="false">When device is locked</string>
    <string-array name="pref_notif_content_titles_long" translatable="false">
        
        <item>Show all notification content including sensitive content</item>
        
        <item>Hide sensitive notification content</item>
        <item>Hide all notification content</item>
    </string-array>
    <string-array name="pref_notif_content_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_volume" translatable="false">Ring volume</string>
    <string name="pref_title_volume2" translatable="false">Media volume</string>
    <string name="global_page_display_preference">Customize Global display settings</string>
    <string name="pref_title_global_override_local">apply to all books</string>
    <string name="pref_header_global_display">Global page display preferences</string>
    <string name="pref_global_display_text_size">Text Size</string>
    <string name="pref_summary_global_override_local">Apply single global preference for all books</string>
    <string name="pref_title_global_night_mode">Night Mode</string>
    <string name="invalid_part_number">Enter a part number from %1$d to %2$d</string>
    <string name="share_app_msg">Let me recommend you %1$s\n%2$s</string>
    <string name="your_input">Write your feedback</string>
    <string name="send_feedback">Send</string>
    <string name="please_write" translatable="false">Please write something.</string>
    <string name="send_feedback_two">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="select_image">+ Add Screenshot</string>
    <string name="click_again">Click again to change the image</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="info_fedback_legal_start">"Your "</string>
    <string name="info_fedback_legal_system_info">"system info "</string>
    <string name="info_fedback_legal_and">"and "</string>
    <string name="info_fedback_legal_log_data">"log data "</string>
    <string name="info_fedback_legal_will_be_sent">will be sent to %s</string>
    <string name="feedback_email" translatable="false">islamiclibrary@islam-db.com</string>
    <string name="about_version_number">Version</string>
    <string name="other_apps">Our Apps</string>
    <string name="about_company">About Fekra Computers</string>
    <string name="about_activity_facebook_label">Facebook</string>
    <string name="facebookUserName" translatable="false">fekraComputers</string>
    <string name="pref_ui_language_arabic">Arabic User Interface</string>
    <string name="download_selected_books">download selected</string>
    <string name="action_add_note">Add Note</string>
    <string name="action_select_all">select all</string>
    <string name="menu_highlight">Add highlight</string>
    <string name="book_details_card_test" translatable="false">"الكتاب: الجامع المسند الصحيح المختصر من أمور رسول الله صلى الله عليه وسلم وسننه وأيامه = صحيح البخاري
المؤلف: محمد بن إسماعيل أبو عبدالله البخاري الجعفي
المحقق: محمد زهير بن ناصر الناصر
الناشر: دار طوق النجاة (مصورة عن السلطانية بإضافة ترقيم ترقيم محمد فؤاد عبد الباقي)
الطبعة: الأولى، 1422هـ
عدد الأجزاء: 9
[ترقيم الكتاب موافق للمطبوع، وهو ضمن خدمة التخريج، ومتن مرتبط بشرحيه فتح الباري لابن رجب ولابن حجر]
مع الكتاب: شرح وتعليق د. مصطفى ديب البغا أستاذ الحديث وعلومه في كلية الشريعة - جامعة دمشق
كالتالي: رقم الحديث (والجزء والصفحة) في ط البغا، يليه تعليقه، ثم أطرافه"</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="prefs_volume_key_navigation_title">Volume key navigation</string>
    <string name="prefs_volume_key_navigation_summary">Navigate between pages using volume keys</string>
    <string name="side_drawer_in_book_search">Search in Books</string>
    <string name="side_drawer_start_multi_book_download">Start group download</string>
    <string name="menu_download_manager">Download manager</string>
    <string name="search_author_names">search author names</string>
    <string name="menu_sort_authors">sort authors</string>
    <string name="prefs_app_location_title">books data directory</string>
    <string name="prefs_app_location_summary">Choose where to store books files</string>
    <string name="action_de_select_all">Clear Selection</string>
    <string name="pref_title_tashkeel">tashkeel</string>
    <string name="menu_item_clear">clear collection</string>
    <string name="menu_delete_collection">delete collection</string>
    <string name="menu_move_up">move up</string>
    <string name="menu_move_down">move down</string>
    <string name="menu_item_rename">Rename</string>
    <string name="show_collecttion">Show</string>
    <string name="pref_title_pinch_zoom">change zoom with pinch</string>
    <string name="about_support">Support Us</string>
</resources>