<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="pref_general">

    <SwitchPreference
        android:defaultValue="true"
        android:key="ui_lang_arabic"
        android:title="@string/pref_ui_language_arabic" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="volumeKeyNavigation"
        android:summary="@string/prefs_volume_key_navigation_summary"
        android:title="@string/prefs_volume_key_navigation_title" />


    <com.fekracomputers.islamiclibrary.widget.DataListPreference
        android:key="custom_app_location_pref"
        android:summary="@string/prefs_app_location_summary"
        android:title="@string/prefs_app_location_title" />


</PreferenceScreen>