<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_dark_24dp"
        android:title="@string/search_list"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/batch_download"
        android:icon="@drawable/ic_file_download_dark_24dp"
        android:title="@string/download_selected_books"
        app:showAsAction="ifRoom"
        >
    </item>
    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_check_box_black_24dp"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom"
        >
    </item>
    <item
        android:id="@+id/clear_selection"
        android:icon="@drawable/ic_check_box_outline_blank_black_24dp"
        android:title="@string/action_de_select_all"
        app:showAsAction="ifRoom"
        >
    </item>


</menu>