<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        tools:text="مجموعة الأحاديث" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Switch
            android:id="@id/menu_item_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_collecttion" />

        <ImageButton
            android:id="@id/menu_item_clear"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/menu_item_clear"
            app:srcCompat="@drawable/ic_clear_all_black_24dp" />

        <ImageButton
            android:id="@id/menu_delete_collection"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/menu_delete_collection"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

        <ImageButton
            android:id="@id/menu_item_rename"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/menu_item_rename"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

        <ImageButton
            android:id="@id/menu_move_up"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/menu_move_up"
            app:srcCompat="@drawable/ic_arrow_upward_black_24dp" />

        <ImageButton
            android:id="@id/menu_move_down"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/menu_move_down"
            app:srcCompat="@drawable/ic_arrow_downward_black_24dp" />


    </LinearLayout>
</android.support.v7.widget.CardView>