<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pref_text_size"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/pref_outer_pad_horiz"
    android:paddingRight="@dimen/pref_outer_pad_horiz"
    android:paddingEnd="@dimen/pref_outer_pad_horiz"
    android:paddingStart="@dimen/pref_outer_pad_horiz">

    <ImageButton
        android:id="@+id/button_minus"
        style="@style/Preference.Button"
        android:contentDescription="@string/decrease_font_size"
        android:scaleType="center"
        app:srcCompat="?settingsTextSmaller" />

    <TextView
        android:id="@+id/setting_text"
        style="@style/Preference.Numeric"
        android:text="@string/pref_text_size_label_initial_text" />

    <ImageButton
        android:id="@+id/button_plus"
        style="@style/Preference.Button"
        android:contentDescription="@string/increase_font_size"
        android:scaleType="center"
        app:srcCompat="?settingsTextLarger" />
</LinearLayout>